Fix focus ring not showing
Use the focus class of react-toggle instead of focus pseudo-class.

--- a/src/assets/scss/components/ColorModeToggle.scss
+++ b/src/assets/scss/components/ColorModeToggle.scss
@@ -114,7 +114,6 @@
 	border-color: var(--chakra-colors-gray-300);
 }
 
-.react-toggle:focus .react-toggle-track,
-.react-toggle:active .react-toggle-track {
+.react-toggle--focus .react-toggle-track {
 	box-shadow: var(--chakra-shadows-outline);
 }
